@@ -94,6 +94,8 @@
     had this)
 55. Hack-around size of QComboBox in page classes so that height is same as
     buttons. (QGtkStyle only)
+56. Support reading of lyrics from HTTP server - specify a HTTP url as MPD
+    music path.
 
 0.9.2
 -----
